--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -2,7 +2,8 @@
 #labels framework,asp
 
 KAF is intalled in five steps:
-* Download the KAF package from http://code.google.com/p/kissaspframework/</p>
+
+* Download the KAF package from http://code.google.com/p/kissaspframework/
 * Unzip the package
 * Open the entrance file such as index.asp with a text editor and include the Kiss/Config.asp file to your entrance file.
 * Set your application constants.
